--- a/task-2/index.html
+++ b/task-2/index.html
@@ -27,7 +27,7 @@
             <div class="list-content">
               <label class="label-pickles" for="check-pickles">
                 <input type="checkbox" id="check-pickles" name="check-pickles" />
-                <span class="span span-pickles">A lot of pickles</span>
+                <span class="span-pickles">A lot of pickles</span>
               </label>
             </div>
           </li>
@@ -36,7 +36,7 @@
             <div class="list-content">
               <label class="label-apples" for="check-apples">
                 <input type="checkbox" id="check-apples" name="ckeck-apples" />
-                <span class="span span-apples">10 apples</span>
+                <span class="span-apples">10 apples</span>
               </label>
             </div>
           </li>
@@ -45,7 +45,7 @@
             <div class="list-content">
               <label for="check-oranges">
                 <input type="checkbox" id="check-oranges" name="ckeck-oranges" />
-                <span class="span span-oranges">20 oranges</span>
+                <span class="span-oranges">20 oranges</span>
               </label>
             </div>
           </li>
@@ -54,7 +54,7 @@
             <div class="list-content">
               <label for="check-plates">
                 <input type="checkbox" id="check-plates" name="ckeck-plates" />
-                <span class="span span-plates">13 plates</span>
+                <span class="span-plates">13 plates</span>
               </label>
             </div>
           </li>
@@ -63,7 +63,7 @@
             <div class="list-content">
               <label for="check-bentos">
                 <input type="checkbox" id="check-bentos" name="ckeck-bentos" />
-                <span class="span span-bentos">15 bentos</span>
+                <span class="span-bentos">15 bentos</span>
               </label>
             </div>
           </li>
@@ -72,13 +72,13 @@
             <div class="list-content">
               <label for="check-bottle">
                 <input type="checkbox" id="check-bottle" name="ckeck-bottle" />
-                <span class="span span-bottle">1 bottle of Sake</span>
+                <span class="span-bottle">1 bottle of Sake</span>
               </label>
             </div>
           </li>
         </ul>
 
-        <button>Bon appetit :)</button>
+        <button type="button">Bon appetit :)</button>
       </div>
     </main>
   </body>
