--- a/task-2/index.html
+++ b/task-2/index.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
       rel="stylesheet"
     />
-    <link rel="icon" href="https://flukeout.github.io/favicon.png">
+    <link rel="icon" href="https://flukeout.github.io/favicon.png" />
     <title>HW-CSS Dinner Shopping List</title>
   </head>
   <body>
@@ -24,60 +24,47 @@
       <div class="container-list">
         <ul>
           <li>
-            <div class="list-content">
-              <label class="label-pickles" for="check-pickles">
-                <input type="checkbox" id="check-pickles" name="check-pickles" />
-                <span class="span-pickles">A lot of pickles</span>
-              </label>
-            </div>
+            <label for="check-pickles">
+              <input type="checkbox" id="check-pickles" name="check-list" />
+              <span class="span-pickles">A lot of pickles</span>
+            </label>
           </li>
 
           <li>
-            <div class="list-content">
-              <label class="label-apples" for="check-apples">
-                <input type="checkbox" id="check-apples" name="ckeck-apples" />
-                <span class="span-apples">10 apples</span>
-              </label>
-            </div>
+            <label for="check-apples">
+              <input type="checkbox" id="check-apples" name="check-list" />
+              <span class="span-apples">10 apples</span>
+            </label>
           </li>
 
           <li>
-            <div class="list-content">
-              <label for="check-oranges">
-                <input type="checkbox" id="check-oranges" name="ckeck-oranges" />
-                <span class="span-oranges">20 oranges</span>
-              </label>
-            </div>
+            <label for="check-oranges">
+              <input type="checkbox" id="check-oranges" name="check-list" />
+              <span class="span-oranges">20 oranges</span>
+            </label>
           </li>
 
           <li>
-            <div class="list-content">
-              <label for="check-plates">
-                <input type="checkbox" id="check-plates" name="ckeck-plates" />
-                <span class="span-plates">13 plates</span>
-              </label>
-            </div>
+            <label for="check-plates">
+              <input type="checkbox" id="check-plates" name="check-list" />
+              <span class="span-plates">13 plates</span>
+            </label>
           </li>
 
           <li>
-            <div class="list-content">
-              <label for="check-bentos">
-                <input type="checkbox" id="check-bentos" name="ckeck-bentos" />
-                <span class="span-bentos">15 bentos</span>
-              </label>
-            </div>
+            <label for="check-bentos">
+              <input type="checkbox" id="check-bentos" name="check-list" />
+              <span class="span-bentos">15 bentos</span>
+            </label>
           </li>
 
           <li>
-            <div class="list-content">
-              <label for="check-bottle">
-                <input type="checkbox" id="check-bottle" name="ckeck-bottle" />
-                <span class="span-bottle">1 bottle of Sake</span>
-              </label>
-            </div>
+            <label for="check-bottle">
+              <input type="checkbox" id="check-bottle" name="check-list" />
+              <span class="span-bottle">1 bottle of Sake</span>
+            </label>
           </li>
         </ul>
-
         <button type="button">Bon appetit :)</button>
       </div>
     </main>
